--- a/pages/subpages/mine/merchant/subpages/set-meal-order/components/order-item/index.wxss
+++ b/pages/subpages/mine/merchant/subpages/set-meal-order/components/order-item/index.wxss
@@ -5,7 +5,7 @@
   border-radius: 16rpx;
 }
 
-.list-header {
+.order-header {
   font-size: 28rpx;
 }
 .contact-btn {
@@ -16,7 +16,7 @@
   color: var(--blue-1);
 }
 
-.list-content {
+.order-content {
   margin: 24rpx 0;
 }
 
@@ -25,31 +25,6 @@
   color: #333;
   font-size: 24rpx;
   font-weight: 550;
-}
-
-.deliver-info-wrap {
-  margin-top: 24rpx;
-  padding: 24rpx;
-  background: #f5f6f7;
-  border-radius: 24rpx;
-}
-.deliver-info {
-  margin-bottom: 16rpx;
-  color: #666;
-  font-size: 24rpx;
-}
-.deliver-info:last-child {
-  margin-bottom: 0;
-}
-.order-sn, .address-detail {
-  margin: 0 10rpx;
-}
-.address-detail {
-  flex: 1;
-}
-.order-icon, .copy-icon, .address-icon {
-  width: 32rpx;
-  height: 32rpx;
 }
 
 .btn-wrap {
