--- a/pages/subpages/mine/order/subpages/set-meal-order/order-detail/index.wxml
+++ b/pages/subpages/mine/order/subpages/set-meal-order/order-detail/index.wxml
@@ -102,4 +102,9 @@
     联系商家
   </button>
 </view>
-  
+
+<qr-code-modal 
+  wx:if="{{qRcodeModalVisible}}"
+  code="{{verifyCode}}" 
+  bind:hide="hideQRcodeModal"
+/>
