--- a/pages/subpages/mine/merchant/subpages/income-detail/index.wxss
+++ b/pages/subpages/mine/merchant/subpages/income-detail/index.wxss
@@ -7,10 +7,24 @@
 }
 .nav-bar-wrap.show-bg {
   overflow: hidden;
-  background: linear-gradient( 180deg, #00B2FF 0%, #F6F6F6 50%);
-  background-size: 100% 100vh;
   background-repeat: no-repeat;
   background-position: top;
+}
+.nav-bar-wrap.show-bg.scenic {
+  background: linear-gradient(180deg, #00B2FF 0%, #F6F6F6 50%);
+  background-size: 100% 100vh;
+}
+.nav-bar-wrap.show-bg.hotel {
+  background: linear-gradient(180deg, #B578E5 0%, #F6F6F6 50%);
+  background-size: 100% 100vh;
+}
+.nav-bar-wrap.show-bg.catering {
+  background: linear-gradient(180deg, #FFBB00 0%, #F6F6F6 50%);
+  background-size: 100% 100vh;
+}
+.nav-bar-wrap.show-bg.goods {
+  background: linear-gradient(180deg, #FE908D 0%, #F6F6F6 50%);
+  background-size: 100% 100vh;
 }
 .nav-bar {
   padding: 0 8px;
@@ -33,21 +47,21 @@
   background-position: top;
 }
 .container.scenic {
-  background: linear-gradient( 180deg, #00B2FF 0%, #F6F6F6 50%);
+  background: linear-gradient(180deg, #00B2FF 0%, #F6F6F6 50%);
 }
 .container.hotel {
-  background: linear-gradient( 180deg, #B578E5 0%, #F6F6F6 50%);
+  background: linear-gradient(180deg, #B578E5 0%, #F6F6F6 50%);
 }
 .container.catering {
-  background: linear-gradient( 180deg, #FFBB00 0%, #F6F6F6 50%);
+  background: linear-gradient(180deg, #FFBB00 0%, #F6F6F6 50%);
 }
 .container.goods {
-  background: linear-gradient( 180deg, #FE908D 0%, #F6F6F6 50%);
+  background: linear-gradient(180deg, #FE908D 0%, #F6F6F6 50%);
 }
 
 .income-card {
   padding: 38rpx 32rpx 32rpx;
-  background: linear-gradient( 218deg, rgba(255,255,255,0) 0%, #FFFFFF 36%);
+  background: linear-gradient(218deg, rgba(255,255,255,0) 0%, #FFFFFF 36%);
   border-radius: 32rpx;
 }
 .income-unit {
