--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -1,3 +1,6 @@
+<import src="index.skeleton.wxml"/>
+<template is="skeleton" wx:if="{{!pageLoaded}}" />
+
 <view class="nav-bar {{navBarActive ? 'active': ''}}" style="padding-top: {{statusBarHeight}}px">
   <!-- <image class="sign-in-icon" src="https://static.tiddler.cn/mp/sign_in.png" /> -->
   <view class="promoter-icon" wx:if="{{!userInfo.promoterInfo && superiorInfo}}">
@@ -12,7 +15,7 @@
 
 <swiper 
   class="banner" 
-  wx:if="{{bannerList.length}}" 
+  wx:if="{{pageLoaded & bannerList.length}}" 
   style="height: calc({{statusBarHeight + 44}}px + 300rpx);" 
   autoplay 
   circular
@@ -31,6 +34,7 @@
 
 <view 
   class="container" 
+  wx:if="{{pageLoaded}}"
   style="top: {{bannerList.length ? 'calc(' + (statusBarHeight + 44) + 'px + 250rpx)' : (statusBarHeight + 44) + 'px'}}; border-radius: {{bannerList.length ? '40rpx 40rpx 0 0' : '0'}};"
 >
   <view class="category-list">
