--- a/pages/subpages/common/register/index.wxss
+++ b/pages/subpages/common/register/index.wxss
@@ -1,4 +1,4 @@
-.login-wrap {
+.register-wrap {
   position: fixed;
   top: 0;
   left: 0;
@@ -22,22 +22,35 @@
 .content-wrap {
   padding: 0 50rpx;
 }
+.logo {
+  margin-left: 54rpx;
+  width: 108rpx;
+  height: 88rpx;
+}
 .title {
-  color: #333;
+  color: #000;
   font-size: 68rpx;
-  font-weight: bolder;
-  /* font-family: Verdana; */
+  font-weight: 550;
 }
 .sub-title {
-  color: #666;
-  font-size: 34rpx;
-  font-weight: bold;
-  /* font-family: Verdana; */
+  margin-top: 24rpx;
+  color: #000;
+  font-size: 32rpx;
+  font-weight: 500;
 }
 .tips {
-  margin-top: 0.6rem;
-  color: #999;
+  margin-top: 8rpx;
+  color: #666;
   font-size: 26rpx;
+  font-weight: 300;
+}
+
+.register-btn-wrap {
+  position: absolute;
+  left: 0;
+  bottom: 300rpx;
+  flex-direction: column;
+  width: 100%;
 }
 .register-btn {
   display: flex;
@@ -45,18 +58,18 @@
   justify-content: center;
   margin-top: 80rpx;
   margin-left: 0;
-  width: 300rpx;
-  height: 80rpx;
+  width: 656rpx;
+  height: 106rpx;
   color: #fff;
-  font-size: 32rpx;
-  font-weight: bold;
+  font-size: 30rpx;
+  font-weight: 500;
   background: var(--blue-1);
-  border-radius: 10rpx;
+  border-radius: 32rpx;
 }
 .arrow {
-  margin-left: 10rpx;
-  width: 40rpx;
-  height: 40rpx;
+  margin-left: 12rpx;
+  width: 22rpx;
+  height: 22rpx;
 }
 .agreement-tips {
   margin-top: 20rpx;
@@ -64,5 +77,7 @@
   font-size: 24rpx;
 }
 .checkbox {
-  transform: scale(0.6);
+  margin-right: 12rpx;
+  width: 30rpx;
+  height: 30rpx;
 }
