--- a/pages/subpages/mall/goods/subpages/goods-detail/index.skeleton.wxml
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.skeleton.wxml
@@ -49,7 +49,7 @@
         1/4
       </view>
     </view>
-    <view class="wrap">
+    <view class="container">
       <view class="goods-info-wrap">
         <view class="price-wrap row">
           <view class="row baseline">
