--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -94,7 +94,8 @@
             <image class="banner-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
           </swiper-item>
         </swiper>
-        <view class="category-list row between">
+        <!-- todo toolVisible - 用于前期提交审核隐藏部分功能，后期需要删除 -->
+        <view class="category-list row between" wx:if="{{toolVisible}}">
           <view class="category-item" wx:for="{{categoryList}}" wx:key="index">
             <image class="category-icon" src="https://static.tiddler.cn/mp/home/{{item.icon}}.png" />
             <view class="category-name">{{item.name}}</view>
