--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -25,7 +25,7 @@
   <view class="content">
     <view class="user-info-wrap">
       <view class="avatar-wrap">
-        <image class="avatar" bindtap="navToUserInfoSetting" src="{{userInfo.avatar}}" />
+        <image class="avatar" bindtap="navToUserInfoSetting" src="{{userInfo.avatar  || 'https://static.tiddler.cn/mp/default_avatar.png'}}" />
         <image 
           class="promoter-medal" 
           wx:if="{{userInfo.promoterInfo}}" 
@@ -35,20 +35,20 @@
       <view class="data-wrap">
         <view class="data-item">
           <view class="data-title">获赞</view>
-          <view class="data">{{NUM.over(userInfo.beLikedTimes, 100000)}}</view>
+          <view class="data">{{userInfo ? NUM.over(userInfo.beLikedTimes, 100000) : 0}}</view>
         </view>
         <view class="data-item" bindtap="checkFollowList">
           <view class="data-title">关注</view>
-          <view class="data">{{NUM.over(userInfo.followedAuthorNumber, 100000)}}</view>
+          <view class="data">{{userInfo ? NUM.over(userInfo.followedAuthorNumber, 100000) : 0}}</view>
         </view>
         <view class="data-item" bindtap="checkFanList">
           <view class="data-title">粉丝</view>
-          <view class="data">{{NUM.over(userInfo.fansNumber, 100000)}}</view>
+          <view class="data">{{userInfo ? NUM.over(userInfo.fansNumber, 100000) : 0}}</view>
         </view>
       </view>
     </view>
     <view class="name" bindtap="navToUserInfoSetting">{{userInfo.nickname}}</view>
-    <view class="introduce row" bindtap="navToUserInfoSetting">
+    <view class="introduce row" wx:if="{{userInfo}}" bindtap="navToUserInfoSetting">
       <text>{{ userInfo.signature || '点击添加签名，让大家了解你～' }}</text>
       <image class="edit-icon" wx:if="{{!userInfo.signature}}" src="https://img.ubo.vip/tiddler/mine/edit.png" />
     </view>
@@ -91,7 +91,7 @@
           <view class="content-wrap">
             <view class="total-info row between">
               <view class="total-tips">共{{videoListTotal}}条视频游记</view>
-              <button class="add-btn" bindtap="navToVideoCreate">
+              <button class="add-btn" bindtap="navToVideoCreate" hover-class="none">
                 <image class="add-icon" src="https://img.ubo.vip/tiddler/mine/add.png" />
                 <text>视频游记</text>
               </button>
@@ -105,14 +105,19 @@
               generic:item="video-item" 
               bind:finish="setWrapHeight" 
             />
-            <empty-illus wx:if="{{videoFinished && !videoList.length}}" desc="暂无作品，快去发布吧" height="520rpx" />
+            <empty-illus 
+              wx:if="{{!userInfo || !videoList.length}}" 
+              desc="{{userInfo ? '暂无作品，快去发布吧' : '您还未登录'}}" 
+            >
+              <view class="login-btn row center" height="520rpx" wx:if="{{!userInfo}}" bindtap="register">点击登录</view>
+            </empty-illus>
           </view>
         </swiper-item>
         <swiper-item>
           <view class="content-wrap">
             <view class="total-info row between">
               <view class="total-tips">共{{noteListTotal}}条图文游记</view>
-              <button class="add-btn" bindtap="navToNoteCreate">
+              <button class="add-btn" bindtap="navToNoteCreate" hover-class="none">
                 <image class="add-icon" src="https://img.ubo.vip/tiddler/mine/add.png" />
                 <text>图文游记</text>
               </button>
@@ -126,7 +131,12 @@
               generic:item="note-item" 
               bind:finish="setWrapHeight" 
             />
-            <empty-illus wx:if="{{noteFinished && !noteList.length}}" desc="暂无作品，快去发布吧" height="520rpx" />
+            <empty-illus 
+              wx:if="{{!userInfo || !noteList.length}}" 
+              desc="{{userInfo ? '暂无作品，快去发布吧' : '您还未登录'}}" 
+            >
+              <view class="login-btn row center" height="520rpx" wx:if="{{!userInfo}}" bindtap="register">点击登录</view>
+            </empty-illus>
           </view>
         </swiper-item>
         <swiper-item>
@@ -140,7 +150,12 @@
               generic:item="media-item" 
               bind:finish="setWrapHeight" 
             />
-            <empty-illus wx:if="{{collectFinished && !collectMediaList.length}}" desc="您还未收藏任何作品" height="680rpx" />
+            <empty-illus 
+              wx:if="{{!userInfo || !collectMediaList.length}}" 
+              desc="{{userInfo ? '您还未收藏任何作品' : '您还未登录'}}" 
+            >
+              <view class="login-btn row center" height="520rpx" wx:if="{{!userInfo}}" bindtap="register">点击登录</view>
+            </empty-illus>
           </view>
         </swiper-item>
         <swiper-item>
@@ -154,7 +169,12 @@
               generic:item="media-item" 
               bind:finish="setWrapHeight" 
             />
-            <empty-illus wx:if="{{likeFinished && !likeMediaList.length}}" desc="您还未点赞任何作品" height="680rpx" />
+            <empty-illus 
+              wx:if="{{!userInfo || !likeMediaList.length}}" 
+              desc="{{userInfo ? '您还未点赞任何作品' : '您还未登录'}}" 
+            >
+              <view class="login-btn row center" height="520rpx" wx:if="{{!userInfo}}" bindtap="register">点击登录</view>
+            </empty-illus>
           </view>
         </swiper-item>
       </swiper>
