--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -287,3 +287,13 @@
   width: 20rpx;
   height: 20rpx;
 }
+
+.login-btn {
+  margin-top: 24rpx;
+  width: 160rpx;
+  height: 56rpx;
+  color: #fff;
+  font-size: 24rpx;
+  background: var(--blue-1);
+  border-radius: 28rpx;
+}
