--- a/pages/tab-bar-pages/home/index.skeleton.wxml
+++ b/pages/tab-bar-pages/home/index.skeleton.wxml
@@ -9,26 +9,26 @@
                 <image lazy-load="true" class="banner-img sk-image" mode="aspectFill"></image>
               </swiper-item>
             </swiper>
-            <view class="category-list row between">
-              <view class="category-item">
-                <image class="category-icon sk-image"></image>
-                <view class="category-name sk-transparent sk-text-14-2857-96 sk-text" style="background-position-x: 50%;">网红打卡</view>
+            <view class="classification-list row between">
+              <view class="classification-item">
+                <image class="classification-icon sk-image"></image>
+                <view class="classification-name sk-transparent sk-text-14-2857-96 sk-text" style="background-position-x: 50%;">网红打卡</view>
               </view>
-              <view class="category-item">
-                <image class="category-icon sk-image"></image>
-                <view class="category-name sk-transparent sk-text-14-2857-191 sk-text" style="background-position-x: 50%;">游湖登岛</view>
+              <view class="classification-item">
+                <image class="classification-icon sk-image"></image>
+                <view class="classification-name sk-transparent sk-text-14-2857-191 sk-text" style="background-position-x: 50%;">游湖登岛</view>
               </view>
-              <view class="category-item">
-                <image class="category-icon sk-image"></image>
-                <view class="category-name sk-transparent sk-text-14-2857-759 sk-text" style="background-position-x: 50%;">环湖骑行</view>
+              <view class="classification-item">
+                <image class="classification-icon sk-image"></image>
+                <view class="classification-name sk-transparent sk-text-14-2857-759 sk-text" style="background-position-x: 50%;">环湖骑行</view>
               </view>
-              <view class="category-item">
-                <image class="category-icon sk-image"></image>
-                <view class="category-name sk-transparent sk-text-14-2857-98 sk-text" style="background-position-x: 50%;">夜游千岛</view>
+              <view class="classification-item">
+                <image class="classification-icon sk-image"></image>
+                <view class="classification-name sk-transparent sk-text-14-2857-98 sk-text" style="background-position-x: 50%;">夜游千岛</view>
               </view>
-              <view class="category-item">
-                <image class="category-icon sk-image"></image>
-                <view class="category-name sk-transparent sk-text-14-2857-414 sk-text" style="background-position-x: 50%;">明星同游</view>
+              <view class="classification-item">
+                <image class="classification-icon sk-image"></image>
+                <view class="classification-name sk-transparent sk-text-14-2857-414 sk-text" style="background-position-x: 50%;">明星同游</view>
               </view>
             </view>
             <view is="pages/subpages/common/home/components/top-media/index">
