--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -93,11 +93,16 @@
             <image class="banner-img" src="{{item.cover}}" mode="aspectFill" lazy-load />
           </swiper-item>
         </swiper>
-        <!-- todo toolVisible - 用于前期提交审核隐藏部分功能，后期需要删除 -->
-        <view class="category-list row between" wx:if="{{toolVisible}}">
-          <view class="category-item" wx:for="{{categoryList}}" wx:key="index">
-            <image class="category-icon" src="https://static.tiddler.cn/mp/home/{{item.icon}}.png" />
-            <view class="category-name">{{item.name}}</view>
+        <view class="classification-list row between">
+          <view 
+            class="classification-item" 
+            wx:for="{{classificationList}}" 
+            wx:key="index"
+            bindtap="checkClassification"
+            data-index="{{index}}"
+          >
+            <image class="classification-icon" src="https://static.tiddler.cn/mp/home/{{item.icon}}.png" />
+            <view class="classification-name">{{item.name}}</view>
           </view>
         </view>
         <top-media mediaList="{{topMediaList}}" />
