--- a/pages/subpages/home/classification/hot-spot/index.wxml
+++ b/pages/subpages/home/classification/hot-spot/index.wxml
@@ -1,1 +1,89 @@
-<view>网红打卡地</view>
+<view class="back-icon-wrap" style="top: {{statusBarHeight + 5}}px">
+  <back-icon custom bind:navigateBack="navBack" />
+</view>
+
+<view class="container">
+  <view class="header">
+    <image class="bg" src="./images/bg.jpg" mode="cover" />
+    <view class="title-wrap">
+      <image class="title" src="https://static.tiddler.cn/mp/classification/hot_spot/title.png" />
+    </view>
+    <scroll-view class="menu-wrap" scroll-x>
+      <view class="menu-item active">
+        <image class="menu-scenic-cover active" src="./images/bg.jpg" mode="cover" />
+        <view class="menu-scenic-info active">
+          <view class="menu-scenic-name active">千岛湖骑龙巷</view>
+          <view class="menu-scenic-data active">18.8w人感兴趣</view>
+        </view>
+      </view>
+      <view class="menu-item">
+        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
+        <view class="menu-scenic-info">
+          <view class="menu-scenic-name">千岛湖骑龙巷</view>
+          <view class="menu-scenic-data">18.8w人感兴趣</view>
+        </view>
+      </view>
+      <view class="menu-item">
+        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
+        <view class="menu-scenic-info">
+          <view class="menu-scenic-name">千岛湖骑龙巷</view>
+          <view class="menu-scenic-data">18.8w人感兴趣</view>
+        </view>
+      </view>
+      <view class="menu-item">
+        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
+        <view class="menu-scenic-info">
+          <view class="menu-scenic-name">千岛湖骑龙巷</view>
+          <view class="menu-scenic-data">18.8w人感兴趣</view>
+        </view>
+      </view>
+      <view class="menu-item">
+        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
+        <view class="menu-scenic-info">
+          <view class="menu-scenic-name">千岛湖骑龙巷</view>
+          <view class="menu-scenic-data">18.8w人感兴趣</view>
+        </view>
+      </view>
+      <view class="menu-item">
+        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
+        <view class="menu-scenic-info">
+          <view class="menu-scenic-name">千岛湖骑龙巷</view>
+          <view class="menu-scenic-data">18.8w人感兴趣</view>
+        </view>
+      </view>
+      <view class="menu-item">
+        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
+        <view class="menu-scenic-info">
+          <view class="menu-scenic-name">千岛湖骑龙巷</view>
+          <view class="menu-scenic-data">18.8w人感兴趣</view>
+        </view>
+      </view>
+      <view class="menu-item">
+        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
+        <view class="menu-scenic-info">
+          <view class="menu-scenic-name">千岛湖骑龙巷</view>
+          <view class="menu-scenic-data">18.8w人感兴趣</view>
+        </view>
+      </view>
+    </scroll-view>
+  </view>
+
+  <scroll-view class="scenic-list" scroll-y>
+    <view class="scenic-item">
+      <image class="top-tag" src="https://static.tiddler.cn/mp/classification/hot_spot/top_1.png" />
+      <image class="scenic-cover" src="./images/bg.jpg" mode="cover" />
+      <view class="scenic-info-wrap row">
+        <view class="scenic-info">
+          <view class="scenic-name">网红打卡地｜千岛湖骑龙巷</view>
+          <view class="scenic-feature row">
+            <image class="recommend-tag" src="https://static.tiddler.cn/mp/classification/hot_spot/reason_tag.png" />
+            <view>有非遗有美食，很适合City Walk</view>
+          </view>
+        </view>
+        <view class="check-btn row center">
+          <image class="arrow" src="https://static.tiddler.cn/mp/classification/hot_spot/arrow.png" />
+        </view>
+      </view>
+    </view>
+  </scroll-view>
+</view>
