feat: 网红打卡地

--- a/pages/subpages/home/classification/hot-scenic/index.wxml
+++ b/pages/subpages/home/classification/hot-scenic/index.wxml
@@ -1,5 +1,5 @@
 <view class="back-icon-wrap" style="top: {{statusBarHeight + 5}}px">
-  <back-icon custom bind:navigateBack="navBack" />
+  <back-icon />
 </view>
 
 <view class="container">
