--- a/pages/subpages/home/classification/hot-scenic/index.wxml
+++ b/pages/subpages/home/classification/hot-scenic/index.wxml
@@ -9,78 +9,35 @@
       <image class="title" src="https://static.tiddler.cn/mp/classification/hot_scenic/title.png" />
     </view>
     <scroll-view class="menu-wrap" scroll-x>
-      <view class="menu-item active">
-        <image class="menu-scenic-cover active" src="./images/bg.jpg" mode="cover" />
-        <view class="menu-scenic-info active">
-          <view class="menu-scenic-name active">千岛湖骑龙巷</view>
-          <view class="menu-scenic-data active">18.8w人感兴趣</view>
-        </view>
-      </view>
-      <view class="menu-item">
-        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
-        <view class="menu-scenic-info">
-          <view class="menu-scenic-name">千岛湖骑龙巷</view>
-          <view class="menu-scenic-data">18.8w人感兴趣</view>
-        </view>
-      </view>
-      <view class="menu-item">
-        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
-        <view class="menu-scenic-info">
-          <view class="menu-scenic-name">千岛湖骑龙巷</view>
-          <view class="menu-scenic-data">18.8w人感兴趣</view>
-        </view>
-      </view>
-      <view class="menu-item">
-        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
-        <view class="menu-scenic-info">
-          <view class="menu-scenic-name">千岛湖骑龙巷</view>
-          <view class="menu-scenic-data">18.8w人感兴趣</view>
-        </view>
-      </view>
-      <view class="menu-item">
-        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
-        <view class="menu-scenic-info">
-          <view class="menu-scenic-name">千岛湖骑龙巷</view>
-          <view class="menu-scenic-data">18.8w人感兴趣</view>
-        </view>
-      </view>
-      <view class="menu-item">
-        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
-        <view class="menu-scenic-info">
-          <view class="menu-scenic-name">千岛湖骑龙巷</view>
-          <view class="menu-scenic-data">18.8w人感兴趣</view>
-        </view>
-      </view>
-      <view class="menu-item">
-        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
-        <view class="menu-scenic-info">
-          <view class="menu-scenic-name">千岛湖骑龙巷</view>
-          <view class="menu-scenic-data">18.8w人感兴趣</view>
-        </view>
-      </view>
-      <view class="menu-item">
-        <image class="menu-scenic-cover" src="./images/bg.jpg" mode="cover" />
-        <view class="menu-scenic-info">
-          <view class="menu-scenic-name">千岛湖骑龙巷</view>
-          <view class="menu-scenic-data">18.8w人感兴趣</view>
+      <view 
+        class="menu-item {{curMenuIdx === index ? 'active' : ''}}" 
+        wx:if="{{hotScenicList}}" 
+        wx:key="index"
+        bindtap="selectMenu"
+        data-index="{{index}}"
+      >
+        <image class="menu-scenic-cover {{curMenuIdx === index ? 'active' : ''}}" src="{{item.scenicCover}}" mode="cover" />
+        <view class="menu-scenic-info {{curMenuIdx === index ? 'active' : ''}}">
+          <view class="menu-scenic-name {{curMenuIdx === index ? 'active' : ''}}">{{item.scenicName}}</view>
+          <view class="menu-scenic-data {{curMenuIdx === index ? 'active' : ''}}">{{item.interestedUserNumber}}人感兴趣</view>
         </view>
       </view>
     </scroll-view>
   </view>
 
   <scroll-view class="scenic-list" scroll-y>
-    <view class="scenic-item">
-      <image class="top-tag" src="https://static.tiddler.cn/mp/classification/hot_scenic/top_1.png" />
-      <image class="scenic-cover" src="./images/bg.jpg" mode="cover" />
+    <view class="scenic-item" wx:for="{{hotScenicList}}" wx:key="index">
+      <image class="top-tag" src="https://static.tiddler.cn/mp/classification/hot_scenic/top_{{index}}.png" />
+      <image class="scenic-cover" src="{{item.scenicCover}}" mode="cover" />
       <view class="scenic-info-wrap row">
         <view class="scenic-info">
-          <view class="scenic-name">网红打卡地｜千岛湖骑龙巷</view>
+          <view class="scenic-name">网红打卡地｜{{item.scenicName}}</view>
           <view class="scenic-feature row">
             <image class="recommend-tag" src="https://static.tiddler.cn/mp/classification/hot_scenic/reason_tag.png" />
-            <view>有非遗有美食，很适合City Walk</view>
+            <view>{{item.recommendReason}}</view>
           </view>
         </view>
-        <view class="check-btn row center">
+        <view class="check-btn row center" bindtap="checkScenic" data-id="{{item.scenicId}}">
           <image class="arrow" src="https://static.tiddler.cn/mp/classification/hot_scenic/arrow.png" />
         </view>
       </view>
