--- a/pages/subpages/home/classification/hot-scenic/index.wxss
+++ b/pages/subpages/home/classification/hot-scenic/index.wxss
@@ -18,7 +18,7 @@
 }
 .bg {
   width: 100%;
-  height: 580rpx;
+  height: 588rpx;
 }
 .title-wrap {
   position: absolute;
@@ -41,13 +41,16 @@
   left: 0;
   bottom: 0;
   width: 100%;
+}
+.menu-list {
+  padding-right: 1rpx;
   white-space: nowrap;
 }
 .menu-item {
   display: inline-block;
   position: relative;
   margin-left: 18rpx;
-  margin-bottom: 40rpx;
+  margin-bottom: 30rpx;
   width: 188rpx;
   height: 170rpx;
   border-radius: 30rpx;
@@ -56,8 +59,11 @@
 .menu-item:first-child {
   margin-left: 32rpx;
 }
+.menu-item:last-child {
+  margin-right: 32rpx;
+}
 .menu-item.active {
-  margin-bottom: 22rpx;
+  margin-bottom: 12rpx;
   padding: 11rpx;
   width: 250rpx;
   height: 255rpx;
@@ -112,13 +118,16 @@
   font-size: 20rpx;
 }
 
-.scenic-list {
+.scenic-list-wrap {
   height: calc(100vh - 750rpx);
   overflow-y: scroll;
 }
+.scenic-list {
+  padding-bottom: 380rpx;
+}
 .scenic-item {
   position: relative;
-  margin: 8rpx 34rpx 28rpx;
+  margin: 4px 34rpx 16px;
   font-size: 0;
 }
 .top-tag {
@@ -130,11 +139,12 @@
 }
 .scenic-cover {
   width: 100%;
-  height: 404rpx;
+  height: 200px;
   border-radius: 48rpx 48rpx 0 0;
 }
 .scenic-info-wrap {
-  padding: 24rpx;
+  padding: 0 24rpx;
+  height: 80px;
   background: #fff;
   border-radius: 0 0 48rpx 48rpx;
 }
