--- a/pages/subpages/home/classification/hot-scenic/index.wxml
+++ b/pages/subpages/home/classification/hot-scenic/index.wxml
@@ -29,7 +29,7 @@
 
   <scroll-view 
     class="scenic-list-wrap"
-    scroll-top="{{curMenuIdx * 296}}" 
+    scroll-top="{{scrollTop}}" 
     bindscroll="onScroll"
     scroll-with-animation 
     scroll-y
