--- a/pages/subpages/mall/components/hotel-item/index.wxss
+++ b/pages/subpages/mall/components/hotel-item/index.wxss
@@ -24,14 +24,14 @@
   font-size: 20rpx;
   line-height: 1;
 }
+.hotel-rate {
+  margin-right: 8rpx;
+  padding-right: 8rpx;
+  border-right: 1px solid #ddd;
+}
 .hotel-rate-number {
   color: #333;
   font-weight: bold;
-}
-.hotel-type {
-  margin-left: 8rpx;
-  padding-left: 8rpx;
-  border-left: 1px solid #ddd;
 }
 
 .labels {
