--- a/pages/subpages/mall/components/scenic-item/index.wxml
+++ b/pages/subpages/mall/components/scenic-item/index.wxml
@@ -1,16 +1,16 @@
 <view class="scenic-item" bindtap="checkDetail">
-  <image class="scenic-image" mode="aspectFill" src="{{info.cover}}" />
-  <view class="scenic-info">
-    <view class="scenic-name omit single">{{info.name}}</view>
-    <view class="scenic-rate-wrap row">
-      <van-rate value="{{info.score || 0}}" size="12" gutter="0" color="#fa2458" void-icon="star" void-color="#fedbe4" allow-half readonly />
-      <view class="scenic-rate">
-        <text style="font-weight: bold;">{{info.score || 0}}</text>
+  <image class="scenic-item-cover" mode="aspectFill" src="{{info.cover}}" />
+  <view class="scenic-item-info">
+    <view class="scenic-item-name omit single">{{info.name}}</view>
+    <view class="scenic-item-rate-wrap row">
+      <van-rate value="{{info.score}}" size="12" gutter="0" color="#fa2458" void-icon="star" void-color="#fedbe4" allow-half readonly />
+      <view class="scenic-item-rate" wx:if="{{info.score}}">
+        <text style="font-weight: bold;">{{info.score}}</text>
         <text>分</text>
       </view>
     </view>
-    <view class="scenic-distance row">
-      <image class="scenic-distance-icon" src="./images/position.png" />
+    <view class="scenic-item-distance row">
+      <image class="scenic-item-distance-icon" src="./images/position.png" />
       <text>相距{{distance}}km</text>
     </view>
   </view>
